--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>chat</title>
   </head>
-  <body>
+  <body style="background: #fafafa;">
     <noscript>
       <strong>We're sorry but chat doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
